# cubase-project-plugins

./: .dprint.json  .editorconfig  .gitattributes  Cargo.toml  CubaseProjectPlugins.sln  LICENSE  README.md  build.rs  clippy.toml  config.sample.toml  config.toml  rustfmt.toml
.github/workflows/: release.yml
CubaseProjectPlugins/: Config.cs  CubaseProjectPlugins.csproj  Plugin.cs  PluginCounter.cs  PluginDetails.cs  Program.cs  ProjectDetails.cs  ProjectReader.cs  Usings.cs
src/: cli.rs  config.rs  cstring_extras.rs  main.rs  project.rs  reader.rs
src/models/: cli.rs  config.rs  mod.rs  project.rs
testdata/: Example Project (Cubase 11).cpr  Example Project (Cubase 13).cpr  Example Project (Cubase 14).cpr  Example Project (Cubase 4.5 32-bit).cpr  Example Project (Cubase 4.5 64-bit).cpr  Example Project (Cubase 5 32-bit).cpr  Example Project (Cubase 5 64-bit).cpr  Example Project (Cubase 6.5 32-bit).cpr  Example Project (Cubase 6.5 64-bit).cpr  Example Project (Cubase 7 32-bit).cpr  Example Project (Cubase 7 64-bit).cpr  Example Project (Cubase 8.5 32-bit).cpr  Example Project (Cubase 8.5 64-bit).cpr  Example Project (Cubase 9.5).cpr  Example Project (Cubase SX3).cpr  Truncated Project (Application).cpr  Truncated Project (Original Plugin Name).cpr  Truncated Project (Plugin GUID).cpr  Truncated Project (Plugin Name Tag).cpr  Truncated Project (Plugin Name Value).cpr  Truncated Project (Release Date).cpr  Truncated Project (Tag After Plugin Name).cpr  Truncated Project (Version).cpr
