[package]
name = "cubase-project-plugins"
version = "0.1.2"
categories = ["command-line-interface"]
edition = "2024"
keywords = ["music-production", "cubase"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fgimian/cubase-project-plugins"
description = "Displays plugins used in your Cubase projects along with the Cubase version the project was created with."

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
correctness = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
cargo = { level = "warn", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 2 }

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
colored = "3.0.0"
dirs = "6.0.0"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.23"
wildmatch = "2.4.0"

[dev-dependencies]
rstest = "0.25.0"
similar-asserts = "1.7.0"
