[package]
name = "cubase-project-plugins"
version = "0.1.2"
categories = ["command-line-interface"]
edition = "2024"
keywords = ["music-production", "cubase"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fgimian/cubase-project-plugins"
description = "Displays plugins used in your Cubase projects along with the Cubase version the project was created with."

[lints.clippy]
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
correctness = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
cargo = { level = "warn", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 2 }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
colored = "3.0.0"
dirs = "6.0.0"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.7"
wildmatch = "2.5.0"

[dev-dependencies]
rstest = "0.26.1"
similar-asserts = "1.7.0"
